# reduce

./: .gitignore  README.md  pyproject.toml
reduce/: __init__.py  stores.py  tasks.py
tests/: helpers.py
